# rmfeeder-rs

./: .gitignore  LICENSE  README.md
docs/: OUTPUT_TARGET_EXPANSION_SPEC.md  PAGE_SIZE_RM2_SPEC.md  RMFEEDER_HELP_UX_SPEC.md  RMFEEDER_MARKDOWN_FEATURE_SPEC.md  THEMATIC_CATEGORIZATION_SPEC.md  TUFTE_TYPOGRAPHY_SPEC.md  UNIFIED_RMFEEDER_SPEC.md  YT_HELPER_V1_SPEC.md
rmfeeder/: Cargo.toml  feeds.opml  output.html  styles.css
rmfeeder/src/: categorize.rs  epub.rs  extractor.rs  feeds.rs  fetcher.rs  lib.rs  main.rs  markdown.rs  multipdf.rs  pdf.rs  state.rs  xhtml.rs  xhtml_sanitize.rs  youtube.rs
rmfeeder/tests/: cli_help.rs  list_targets_cli.rs
scripts/: render-target-samples.sh
testdata/: target-sample.md
