[package]
name = "rmfeeder"
version = "0.1.0"
edition = "2024"

[dependencies]
# Readability-style article extractor
dom_smoothie = "0.13.0"
epub-builder = "0.8.0"
feed-rs = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5.0"