[package]
name = "rmfeeder"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
url = "2.5"
dom_smoothie = "0.5"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
feed-rs = "1.4"
roxmltree = "0.20"
pulldown-cmark = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
